# zaim-lens

./: .env.example  .gcloudignore  .gitignore  CLOUD_SETUP.md  DEPLOY.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  USER_GUIDE.md  ZAIM_OAUTH_SETUP.md  db.py  global.d.ts  jsconfig.json  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  schemas.py
.github/: dependabot.yml
.github/workflows/: dependabot-uv-sync.yml  deploy.yml  static-analysis.yml  sync-develop.yml
routers/: __init__.py  gemini.py  system.py  zaim.py
services/: auth.py  gemini.py  master_data_service.py  zaim_client.py  zaim_service.py
static/: OSS_LICENSES.txt  app.js  guide.html  index.html  input.css  manifest.json  privacy.html  robots.txt  sitemap.xml  styles.css  sw.js  tailwind.css  terms.html
static/js/: main.js  state.js
static/js/api/: backend.js  zaim.js
static/js/features/: auth.js  history.js  receipt.js  settings.js
static/js/features/history/: api.js  index.js  ui.js
static/js/features/receipt/: api.js  image.js  index.js  queue.js  ui.js
static/js/utils/: analytics.js  common.js  dom.js
templates/: base.html  index.html  privacy.html  terms.html
templates/components/: _copy_panel.html  _head.html  _header.html  _modals.html  _overlays.html  _parser_panel.html  _splash.html
